version/0.1/_sources/api/ansys/sam/sysml2/builder/sysml2_project_builder/SysML2ProjectBuilder.rst.txt






:class:`SysML2ProjectBuilder`
=============================


.. py:class:: ansys.sam.sysml2.builder.sysml2_project_builder.SysML2ProjectBuilder(connector: ansys.sam.sysml2.api.sysml2_api_connector.SysML2APIConnector)

   
   Provides the SysML2 project builder.
















   ..
       !! processed by numpydoc !!


.. py:currentmodule:: SysML2ProjectBuilder

Overview
--------

.. tab-set::



   .. tab-item:: Methods

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~build_project`
            - Call the API with the specified project ID and build the project from JSON.
          * - :py:attr:`~extract_root_and_check_names`
            - Parse all project elements, extract the root element, and update names.
          * - :py:attr:`~reload_project`
            - Reload the project and update all its elements.








Import detail
-------------

.. code-block:: python

    from ansys.sam.sysml2.builder.sysml2_project_builder import SysML2ProjectBuilder



Method detail
-------------

.. py:method:: build_project(project_id: str) -> ansys.sam.sysml2.classes.project.Project

   
   Call the API with the specified project ID and build the project from JSON.
















   ..
       !! processed by numpydoc !!

.. py:method:: extract_root_and_check_names(project: ansys.sam.sysml2.builder.classes.project_impl.ProjectImpl)

   
   Parse all project elements, extract the root element, and update names.
















   ..
       !! processed by numpydoc !!

.. py:method:: reload_project(modification_observer: ansys.sam.sysml2.observer.observer.ModificationObserver, project: ansys.sam.sysml2.builder.classes.project_impl.ProjectImpl)

   
   Reload the project and update all its elements.


   :Parameters:

       **modification_observer** : :obj:`ModificationObserver`
           Observer instance.

       **project** : :obj:`ProjectImpl`
           Project instance to reload.














   ..
       !! processed by numpydoc !!




